--- a/css/main.css
+++ b/css/main.css
@@ -51,4 +51,5 @@ button {
     left: 50%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     transform: translate(-50%,-50%);
+    word-break: break-all;
 }
